Image Code Edit

--- a/portfolio.html
+++ b/portfolio.html
@@ -52,7 +52,7 @@
 			<div class="velo-slides" data-velo-slider="on" data-velo-theme="light">
 				<section class="velo-slide">		   
 					<div class="velo-slide__bg">      
-						<figure class="velo-slide__figure" style="background-image: url(img/3.jpg)"></figure>
+						<figure class="velo-slide__figure" style="background-image: url(https://parizval.github.io/img/3.jpg)"></figure>
 					</div>
 					<header class="velo-slide__header">
 						<div class="container">
@@ -68,7 +68,7 @@
 				</section>
 				<section class="velo-slide">
 					<div class="velo-slide__bg">
-						<figure class="velo-slide__figure" style="background-image: url(img/3.jpg)"></figure>
+						<figure class="velo-slide__figure" style="background-image: url(https://parizval.github.io/img/3.jpg)"></figure>
 					</div>
 					<header class="velo-slide__header">
 						<div class="container">
