--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
 				<ul class="nav__list">
 					<li class="nav__list-item active-nav"><a class="cursor-link" role="button" aria-expanded="false" aria-controls="collapseSub">Projects</a>
 					</li>
-					<li class="nav__list-item"><a href="studio.html" class="cursor-link animsition-link">HomePage</a></li>				
+					<li class="nav__list-item"><a href="https://parizval.github.io/" class="cursor-link animsition-link">HomePage</a></li>				
 				</ul>
 			</div>
 		</div>	
