FitBlocks Link Update

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
 								<div class="col-md-12">
 									<h3 class="velo-slide__title"><span class="oh"><span>FitBlocks</span></span></h3>
 									<p class="velo-slide__text"><span class="oh"><span>A blockchain based fitness application </span></span></p>
-									<span class="velo-slide__btn"><a class="btn-draw cursor-link animsition-link" href=""><span class="btn-draw__text"><span>View Work</span></span></a></span>
+									<span class="velo-slide__btn"><a class="btn-draw cursor-link animsition-link" href="https://devfolio.co/submissions/fitblocks"><span class="btn-draw__text"><span>View Work</span></span></a></span>
 								</div>
 							</div>	
 						</div>
