Added Recent Projects

--- a/portfolio.html
+++ b/portfolio.html
@@ -50,6 +50,40 @@
 		</div>	
 		<div class="section full-height over-hide background-dark-2">
 			<div class="velo-slides" data-velo-slider="on" data-velo-theme="light">
+				
+				<section class="velo-slide">		   
+					<div class="velo-slide__bg">      
+						<figure class="velo-slide__figure" style="background-image: url(https://parizval.github.io/img/3.jpg)"></figure>
+					</div>
+					<header class="velo-slide__header">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-12">
+									<h3 class="velo-slide__title"><span class="oh"><span>HisTree</span></span></h3>
+									<p class="velo-slide__text"><span class="oh"><span>A decision based game based on the history. </span></span></p>
+									<span class="velo-slide__btn"><a class="btn-draw cursor-link animsition-link" href="https://github.com/Parizval/HisTree"><span class="btn-draw__text"><span>View Work</span></span></a></span>
+								</div>
+							</div>	
+						</div>
+					</header>
+				</section>
+
+				<section class="velo-slide">		   
+					<div class="velo-slide__bg">      
+						<figure class="velo-slide__figure" style="background-image: url(https://parizval.github.io/img/3.jpg)"></figure>
+					</div>
+					<header class="velo-slide__header">
+						<div class="container">
+							<div class="row">
+								<div class="col-md-12">
+									<h3 class="velo-slide__title"><span class="oh"><span>Diversify</span></span></h3>
+									<p class="velo-slide__text"><span class="oh"><span>A graph-theory based application to diversify your portfolio </span></span></p>
+									<span class="velo-slide__btn"><a class="btn-draw cursor-link animsition-link" href="https://github.com/Parizval/KJSCEHack"><span class="btn-draw__text"><span>View Work</span></span></a></span>
+								</div>
+							</div>	
+						</div>
+					</header>
+				</section>
 				<section class="velo-slide">		   
 					<div class="velo-slide__bg">      
 						<figure class="velo-slide__figure" style="background-image: url(https://parizval.github.io/img/3.jpg)"></figure>
@@ -66,6 +100,7 @@
 						</div>
 					</header>
 				</section>
+
 				<section class="velo-slide">
 					<div class="velo-slide__bg">
 						<figure class="velo-slide__figure" style="background-image: url(https://parizval.github.io/img/3.jpg)"></figure>
