Removed Extra Files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-		<title>Penelope</title>
+		<title>Parizval</title>
 		<meta name="description" content="Penelope - CV / Resume / Personal Website Template by Hencework" />
 		<meta name="keywords" content="Penelope, responsive resume template, cv template, multipurpose, responsive template, vcard, html5 template, themeforest, bootstrap, html5, creative, landing page, sass, clean, design, modern, angular js" />
 		<meta name="author" content="Hencework"/>
@@ -72,7 +72,7 @@
 							<div class="float-left name">
 								<a data-scroll href="#body">
 								<span>
-								ABE LARKEY
+								Anmol Goyal
 								</span>
 								</a>	
 							</div>
