Website Logo Modified

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<meta name="author" content="Hencework"/>
 		
 		<!--Favicon-->
-		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="logo.png">
+		<link rel="icon" href="logo.png" type="image/x-icon">
 		
 		<!--Fonts-->
 		<link href='https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Hind:400,500,300,600' rel='stylesheet' type='text/css'>
