Updated Skillset Section in Index Page:

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Lewis - Creative Portfolio HTML Template">
     <meta name="author" content="Paul, Logan Cee">
 
-    <title>Ethant Hunt</title>
+    <title>Anmol Goyal </title>
 
     <!-- CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -176,7 +176,7 @@
                     <div class="bar-list a-progressbar animate-element delay9 fadeInUp">
                       <div class="bar-item">
                         <div class="row">
-                          <div class="col bar-item-title">Mobile Design</div>
+                          <div class="col bar-item-title">Software Architecture Design</div>
                           <div class="col-auto text-right bar-item-value">80%</div>
                         </div>
                         <div class="progress">
@@ -185,25 +185,25 @@
                       </div>
                       <div class="bar-item">
                         <div class="row">
-                          <div class="col bar-item-title">3D Modeling</div>
-                          <div class="col-auto text-right bar-item-value">100%</div>
+                          <div class="col bar-item-title">Python  </div>
+                          <div class="col-auto text-right bar-item-value">95%</div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar" role="progressbar" aria-valuenow="95" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                       <div class="bar-item">
                         <div class="row">
-                          <div class="col bar-item-title">Illustration</div>
-                          <div class="col-auto text-right bar-item-value">80%</div>
+                          <div class="col bar-item-title">Go</div>
+                          <div class="col-auto text-right bar-item-value">85%</div>
                         </div>
                         <div class="progress">
-                          <div class="progress-bar" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
+                          <div class="progress-bar" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                       </div>
                       <div class="bar-item">
                         <div class="row">
-                          <div class="col bar-item-title">Typography</div>
+                          <div class="col bar-item-title">DevOps Services</div>
                           <div class="col-auto text-right bar-item-value">90%</div>
                         </div>
                         <div class="progress">
