--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, user-scalable=0">
-    <meta name="description" content="Lewis - Creative Portfolio HTML Template">
-    <meta name="author" content="Paul, Logan Cee">
-
     <title>Anmol Goyal </title>
 
     <!-- CSS -->
@@ -169,9 +166,9 @@
                   <div class="col-md-5">
                     <div class="animate-element delay5 fadeInUp">
                       <div class="title-mini text-primary">my featured skills</div>
-                      <h2 class="slide-title font-custom">I’m using <span class="text-typed a-typed a-typed-skills" data-text="top leading"></span><br /> design methods.</h2>
+                      <h2 class="slide-title font-custom">I’m using <span class="text-typed a-typed a-typed-skills" data-text="leading"></span><br /> software development methods.</h2>
                     </div>
-                    <div class="slide-descr animate-element delay7 fadeInUp">I specialize in helping early stage startups validate their riskiest assumptions using <strong>leading design methods</strong>.</div>
+                    <!-- <div class="slide-descr animate-element delay7 fadeInUp">I specialize in helping developing the Architecture of software  stage startups validate their riskiest assumptions using <strong>leading design methods</strong>.</div> -->
 
                     <div class="bar-list a-progressbar animate-element delay9 fadeInUp">
                       <div class="bar-item">
@@ -303,10 +300,10 @@
                 </div>
                 <div class="portfolio-carousel a-portfolio-carousel owl-carousel owl-theme animate-element delay7 fadeInUp">
                   <div class="portfolio-item">
-                    <div class="portfolio-item-photo"><a href="#"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
+                    <div class="portfolio-item-photo"><a href="https://github.com/Parizval/DeveloperDock"><img src="img/portfolio-screen1.jpg" alt="" /></a></div>
                     <div class="portfolio-item-detail">
-                      <div class="portfolio-item-title primary-link"><a href="#">Polychromatic Logo</a></div>
-                      <div class="portfolio-item-descr">Branding Design</div>
+                      <div class="portfolio-item-title primary-link"><a href="https://github.com/Parizval/DeveloperDock">Developers Dock</a></div>
+                      <div class="portfolio-item-descr">Kubernetes Management Solution</div>
                     </div>
                   </div>
                   <div class="portfolio-item">
