--- a/index.html
+++ b/index.html
@@ -127,11 +127,10 @@
 
                     <nav class="service-list animate-element delay9 fadeInUp">
                       <ul class="">
-                        <li class="primary-link"><a href="#">UX & UI Design</a></li>
-                        <li class="primary-link"><a href="#">Branding Design</a></li>
-                        <li class="primary-link"><a href="#">Mobile App Design</a></li>
-                        <li class="primary-link"><a href="#">Art & Illustration</a></li>
-                        <li class="primary-link"><a href="#">3D Modeling & Motion</a></li>
+                        <li class="primary-link"><a href="https://github.com/StableLend">DeFi ( Decentralized Finance) Development</a></li>
+                        <li class="primary-link"><a href="https://github.com/Parizval/Diversify">Financial Algorithm Development</a></li>
+                        <li class="primary-link"><a href="https://github.com/Parizval/DeveloperDock">Cloud and Kubernetes Management</a></li>
+                        <li class="primary-link"><a href="https://github.com/Allocative">Server Side Development </a></li>
                       </ul>
                     </nav>
                   </div>
@@ -246,15 +245,15 @@
                     <div class="animate-element delay9 fadeInUp">
                       <h2 class="slide-title font-custom slide-title-margin-md">Education</h2>
                       <div class="vacancy-item">
-                        <div class="vacancy-item-title"><a href="#">Graphic Design</a></div>
-                        <div class="vacancy-item-place">University of Studies, Caloforlia</div>
-                        <div class="vacancy-item-time text-primary">Jan 2002 - Dec 2007</div>
-                        <div class="vacancy-item-text">Major in Graphic Design, UX/UI Design, Product Desgin and Illustration</div>
+                        <div class="vacancy-item-title"><a href="https://www.bennett.edu.in/admission/programs/b-tech/cse/">Computer Science Engineering</a></div>
+                        <div class="vacancy-item-place">Bennett University, Delhi</div>
+                        <div class="vacancy-item-time text-primary">July 2018 - July 2022</div>
+                        <div class="vacancy-item-text">Major in Computer Science and Minor in Entrepreneurship</div>
                       </div>
                       <div class="vacancy-item">
-                        <div class="vacancy-item-title"><a href="#">Graphic Design</a></div>
-                        <div class="vacancy-item-place">Eco Design Agency, Caloforlia</div>
-                        <div class="vacancy-item-time text-primary">Jan 2004 - Dec 2006</div>
+                        <div class="vacancy-item-title"><a href="#">High School </a></div>
+                        <div class="vacancy-item-place">The British School, Chandigarh</div>
+                        <div class="vacancy-item-time text-primary">July 2016 - April 2018</div>
                         <div class="vacancy-item-text">Major in Graphic Design, UX/UI Design, Product Desgin, Illustration, 3D Modeling and Marketing</div>
                       </div>
                     </div>
@@ -269,16 +268,16 @@
                     <div class="animate-element delay11 fadeInUp">
                       <h2 class="slide-title font-custom slide-title-margin-md">Experience</h2>
                       <div class="vacancy-item">
-                        <div class="vacancy-item-title"><a href="#">Senior Graphic Designer</a></div>
-                        <div class="vacancy-item-place">Market Studios, Ltd., Norwalk, California</div>
-                        <div class="vacancy-item-time text-primary">Jan 2018 - Present</div>
-                        <div class="vacancy-item-text">Created design theme & graphics for marketing and sales presentations, training videos and websites.</div>
+                        <div class="vacancy-item-title"><a href="#">Senior Software Engineer</a></div>
+                        <div class="vacancy-item-place">Tezsure, San Mateo, California</div>
+                        <div class="vacancy-item-time text-primary">December 2020 - Present</div>
+                        <div class="vacancy-item-text">Develop Decentralized Finanical Algorithms Smart Contracts, Dapps</div>
                       </div>
                       <div class="vacancy-item">
-                        <div class="vacancy-item-title"><a href="#">UX/UI Designer</a></div>
-                        <div class="vacancy-item-place">Dimensions, Huntington Beach, California</div>
-                        <div class="vacancy-item-time text-primary">June 2004 - Dec 2017</div>
-                        <div class="vacancy-item-text">Created new design themes for marketing and collateral materials.</div>
+                        <div class="vacancy-item-title"><a href="#">Tezos India Fellowship</a></div>
+                        <div class="vacancy-item-place">Tezos India Foundation, Banglore</div>
+                        <div class="vacancy-item-time text-primary">Aug 2020 - Oct 2020</div>
+                        <div class="vacancy-item-text">Develop Financial Derivatives on Tezos Ecosystem.</div>
                       </div>
                     </div>
                   </div>
