updated work exp links

--- a/index.html
+++ b/index.html
@@ -268,13 +268,13 @@
                     <div class="animate-element delay11 fadeInUp">
                       <h2 class="slide-title font-custom slide-title-margin-md">Experience</h2>
                       <div class="vacancy-item">
-                        <div class="vacancy-item-title"><a href="#">Senior Software Engineer</a></div>
+                        <div class="vacancy-item-title"><a href="https://tezsure.com/">Senior Software Engineer</a></div>
                         <div class="vacancy-item-place">Tezsure, San Mateo, California</div>
                         <div class="vacancy-item-time text-primary">December 2020 - Present</div>
                         <div class="vacancy-item-text">Develop Decentralized Finanical Algorithms Smart Contracts, Dapps</div>
                       </div>
                       <div class="vacancy-item">
-                        <div class="vacancy-item-title"><a href="#">Tezos India Fellowship</a></div>
+                        <div class="vacancy-item-title"><a href="https://tezos-india-fellowship.devfolio.co/">Tezos India Fellowship</a></div>
                         <div class="vacancy-item-place">Tezos India Foundation, Banglore</div>
                         <div class="vacancy-item-time text-primary">Aug 2020 - Oct 2020</div>
                         <div class="vacancy-item-text">Develop Financial Derivatives on Tezos Ecosystem.</div>
