updated job role

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                   <div class="col-lg-8">
                     <div class="animate-element delay5 fadeInUp">
                       <div class="title-mini text-primary">About me</div>
-                      <h1 class="slide-title font-custom">Hello, I’m <span class="text-typed a-typed a-typed-about" data-text="Anmol Goyal"></span><br /> I’m working as Software Developer.</h1>
+                      <h1 class="slide-title font-custom">Hello, I’m <span class="text-typed a-typed a-typed-about" data-text="Anmol Goyal"></span><br /> I’m working as DeFi Wizard.</h1>
                     </div>
                     <div class="slide-photo slide-photo-about">
                       <div class="rounded-text">
